@@ -1,3 +1,5 @@
+2005/9/5 -- released version 20050905_trunk
+
 * don't create directories in "datadir" when running as a CGI
   -- niko
 * the DYNAMIC-related files (.adr and .snmp) can now be located outside "datadir"
